fixed some minor alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap');
 :root {
     --main-background-color: #f7f8f3;
@@ -8,7 +8,7 @@
 
 body {
     background-color: var(--main-background-color);
-    font-family: 'Cinzel', 'Roboto', sans-serif;
+    font-family: 'Cinzel', 'Muli', sans-serif;
     margin: 0 auto;
     max-width: 1400px;
     min-width: 350px;
@@ -31,7 +31,7 @@ body {
 .nav-icons {
     position: absolute;
     top: 1rem;
-    right: 3%;
+    right: 1rem;
 }
 
 /* Section of Carousel */
@@ -50,9 +50,7 @@ body {
     margin: 0 0 1rem 0;
 }
 
-
 @media(max-width: 990px) {
-
     .carousel-caption h2 {
         display: block;
         font-size: 3rem;
@@ -68,7 +66,6 @@ body {
 }
 
 @media(max-width: 600px) {
-
     .carousel-caption h2 {
         display: none;
     }
@@ -124,7 +121,7 @@ video {
 .section-email-background {
     width: 100%;
     height: 200px;
-    padding: 2rem 2rem;
+    padding: 2rem 1rem;
 }
 
 .email-form-container {
@@ -135,6 +132,7 @@ video {
     margin: 0 1rem;
     width: 60%;
     max-width: 400px;
+    font-family: 'Muli', sans-serif;
 }
 
 /* Footer */
@@ -160,11 +158,6 @@ video {
 
 .div-footer .icon-button{
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 1rem;
-}
-
-.footer-content {
-    display: flex;
-    flex-direction: column;
 }
